--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,8 +70,7 @@ button:focus, .button:focus, a.button:focus, [type=submit]:focus, [type=button]:
   overflow: auto;
   background-color: #EFEFEF;
   border-radius: 15px;
-  box-shadow: 0px 5px 2px #888;
-  cursor: pointer; }
+  box-shadow: 0px 5px 2px #888; }
 
 /* The Modal (background) */
 .modal {
@@ -302,20 +301,6 @@ a {
     max-width: 400px;
     max-height: 40px;
     overflow: scroll; }
-
-.modal-createEvent {
-  background-color: #fefefe;
-  margin: 5% auto;
-  padding: 20px;
-  width: 40%;
-  height: 60%;
-  border-radius: 15px;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-flow: column nowrap;
-      flex-flow: column nowrap; }
-  .modal-createEvent-titleInput {
-    width: 80%; }
 
 #calendar {
   padding: 2% 2%;
