--- a/partials/createEventModal.html
+++ b/partials/createEventModal.html
@@ -1,4 +1,5 @@
 <div class="modal-createEvent modal-content">
+    <!-- HELLO WORLD -->
     <span class="close"><i class="fa fa-close fa-md"></i></span>
 
     <h1>Create an Event</h1>
