--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -12,6 +12,7 @@
 @import "modules/login";
 @import "modules/upload";
 @import "modules/friends";
+@import "modules/createEvent.scss";
 @import "modules/calendar";
 @import "modules/sidebar";
 
