--- a/assets/scss/modules/createEvent.scss
+++ b/assets/scss/modules/createEvent.scss
@@ -11,9 +11,27 @@
     display: flex;
     flex-flow: column nowrap;
 
+    h1 {
+        margin: 10px 0;
+    }
+
+    p {
+        font: {
+            size: 14px;
+            weight: 100;
+        }
+    }
+
     &-titleInput {
         width: 80%;
-        font-weight: 100;
+        margin: 2% 0;
+
+        input[type="text"] {
+            width: 20vw;
+            font: {
+                size: 16px;
+            }
+        }
     }
 
 }
