--- a/partials/createEventModal.html
+++ b/partials/createEventModal.html
@@ -5,29 +5,29 @@
     <h1>Create an Event</h1>
 
     <span class="modal-createEvent-titleInput">
-        <p>Title</p>
+        <label for="eventTitle">Title</label>
         <input type="text" id="eventTitle" placeholder="Enter a name for your event">
     </span>
     <span class="modal-createEvent-timeInput">
-        <p>Start</p>
+        <label for="startTime">Start</label>
         <input type="time" id="startTime">
         <input type="date" id="startDate">
     </span>
     <span class="modal-createEvent-timeInput">
-        <p>End</p>
+        <label for="endTime">End</label>
         <input type="time" id="endTime">
         <input type="date" id="endDate">
     </span>
     <span class="modal-createEvent-locationInput">
-        <p>Location</p>
-        <input type="text" name="location" placeholder="Enter your event's location">
+        <label for="location">Location</label>
+        <input type="text" id="eventLocation" placeholder="Enter your event's location">
     </span>
     <span class="modal-createEvent-descInput">
-        <p>Description</p>
-        <input type="" name="name" value="" row="10" placeholder="Write a description for your event">
+        <label for="eventDescription">Description</label>
+        <input id="eventDescription" type="" name="name" value="" row="10" placeholder="Write a description for your event">
     </span>
     <span class="modal-createEvent-friendsInput">
-        <p>Invite Friends</p>
+        <label for="modal-createEvent-friends-searchbar">Invite Friends</label>
         <input
             id="modal-createEvent-friends-searchbar"
             type="text"
