creating editEvent modals and styles

--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -13,6 +13,7 @@
 @import "modules/upload";
 @import "modules/friends";
 @import "modules/createEvent.scss";
+@import "modules/editEvent.scss";
 @import "modules/calendar";
 @import "modules/sidebar";
 
