--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -325,6 +325,18 @@ a {
       width: 20vw;
       font-size: 16px; }
 
+.modal-editEvent {
+  background-color: #fefefe;
+  margin: 5% auto;
+  padding: 20px;
+  width: 40%;
+  height: 60%;
+  border-radius: 15px;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-flow: column nowrap;
+      flex-flow: column nowrap; }
+
 #calendar {
   padding: 2% 2%;
   width: 80%; }
