modified partials for event addition

--- a/partials/createEventModal.html
+++ b/partials/createEventModal.html
@@ -39,6 +39,6 @@
         <datalist id="modal-createEvent-friends-list"></datalist>
     </span>
 
-    <button id="submitEvent" onclick="debug()">Create</button>
+    <button id="submitEvent" onclick="create()">Create</button>
 
 </div>
