--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,10 +1,10 @@
 <div class="sidebar-container sidebar-container-logo">
 	<a href="/"><img src="assets/img/placeholder.jpg" alt="placeholder" /></a>
 </div>
-<div class="sidebar-container sidebar-container-user">
+<div class="sidebar-container sidebar-container-user" ng-controller="loginCtrl">
 	<button class="sidebar-user" id="loginButton">
 		<img src="assets/img/placeholder.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
-		<h2>Clifford Lee</h2>
+		<h2>{{ user }}</h2>
 	</button>
 </div>
 <div class="sidebar-container sidebar-container-function">
