--- a/assets/css/fullcalendar-custom.css
+++ b/assets/css/fullcalendar-custom.css
@@ -55,10 +55,10 @@ table {
   border-spacing: 0; }
 
 .fc-state-active {
-  box-shadow: none; }
+  box-shadow: none;
+  z-index: 0; }
 
 .fc-state-default {
-  background-color: #7C1400;
   box-shadow: none;
   background-image: none;
   text-shadow: none; }
@@ -73,3 +73,17 @@ table {
 .fc-state-active {
   box-shadow: none;
   background-image: none; }
+
+.fc-toolbar .fc-state-hover,
+.fc-toolbar .ui-state-hover {
+  z-index: 0; }
+
+.fc-toolbar .fc-state-down {
+  z-index: 0; }
+
+.fc-toolbar .fc-state-active,
+.fc-toolbar .ui-state-active {
+  z-index: 0; }
+
+.fc-toolbar button:focus {
+  z-index: 0; }
