--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -4,7 +4,7 @@
 <div class="sidebar-container sidebar-container-user" ng-controller="loginCtrl">
 	<button class="sidebar-user" id="loginButton">
 		<img src="assets/img/placeholder.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
-		<h2>{{ user }}</h2>
+		<h2 id="sidebarUser">Guest</h2>
 	</button>
 </div>
 <div class="sidebar-container sidebar-container-function">
