friend loading functionality in friends Menu

--- a/partials/friendsModal.html
+++ b/partials/friendsModal.html
@@ -2,56 +2,7 @@
     <span class="close"><i class="fa fa-close fa-md"></i></span>
     <div class="modal-friends-content">
 
-        <div class="modal-friends-content-sidebar">
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 1</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 2</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 3</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 1</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 2</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 3</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 1</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 2</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 3</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 1</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 2</h4>
-            </div>
-            <div class="friend">
-                <img src="./assets/img/placeholder.jpg" alt="friend :)" class="friend-img">
-                <h4>Friend 3</h4>
-            </div>
-        </div>
+        <div class="modal-friends-content-sidebar"></div>
 
         <div class="modal-friends-content-main">
             <ul class="modal-friends-content-main-tablist">
@@ -114,4 +65,5 @@
         </div>
 
     </div>
+    <script type="text/javascript" src="app/friendsMenu.js"></script>
 </div>
