friend population templating

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -335,7 +335,7 @@ table {
       height: 500px;
       margin: 2.5% 0 2.5% 0;
       overflow: scroll;
-      background-color: salmon;
+      background-color: #656B7E;
       border-top-left-radius: 1em;
       border-bottom-left-radius: 1em; }
     .modal-friends-content-main {
