--- a/partials/editEventModal.html
+++ b/partials/editEventModal.html
@@ -4,6 +4,7 @@
     <div class="modal-editEvent-name">
         <h2 id="editEventTitle"></h2>
     </div>
+    <h1 id="editEventID"></h1>
     <div class="modal-editEvent-timeInput">
         <label for="startTime">Start</label>
         <input type="time" id="startTime">
