--- a/assets/scss/modules/friends.scss
+++ b/assets/scss/modules/friends.scss
@@ -14,7 +14,7 @@
             height: 500px;
             margin: 2.5% 0 2.5% 0;
             overflow: scroll;
-            background-color: salmon;
+            background-color: $grey;
             border-top-left-radius: 1em;
             border-bottom-left-radius: 1em;
         }
