working on friends 2x append child bug

--- a/partials/createEventModal.html
+++ b/partials/createEventModal.html
@@ -24,7 +24,19 @@
     </span>
     <span class="modal-createEvent-descInput">
         <label for="eventDescription">Description</label>
-        <input id="eventDescription" type="" name="name" value="" row="10" placeholder="Write a description for your event">
+        <textarea id="eventDescription" type="" name="name" value="" row="10" placeholder="Write a description for your event"></textarea>
+    </span>
+    <span class="modal-createEvent-colorInput">
+        <label for="colorSelect">Color</label>
+        <select class="modal-createEvent-colorInput-select" id="colorSelect">
+            <option value="#F44336">RED</option>
+            <option value="#FF9800">ORANGE</option>
+            <option value="#FFEB3B">YELLOW</option>
+            <option value="#4CAF50">GREEN</option>
+            <option value="#2196F3">BLUE</option>
+            <option value="#3F51B5">INDIGO</option>
+            <option value="#673AB7">VIOLET</option>
+        </select>
     </span>
     <span class="modal-createEvent-friendsInput">
         <label for="modal-createEvent-friends-searchbar">Invite Friends</label>
