--- a/partials/friendsModal.html
+++ b/partials/friendsModal.html
@@ -2,7 +2,7 @@
     <span class="close"><i class="fa fa-close fa-md"></i></span>
     <div class="modal-friends-content">
 
-        <div class="modal-friends-content-sidebar" id="friends-sidebar"></div>
+        <div id="friends-sidebar" class="modal-friends-content-sidebar"></div>
 
         <div class="modal-friends-content-main">
             <ul class="modal-friends-content-main-tablist">
