--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -21,61 +21,5 @@
 			notif
 		</p>
 	</div>
-	<div class="eventnotif">
-		<h3>hello</h3>
-		<p>
-			notif
-		</p>
-	</div>
-	<div class="eventnotif">
-		<h3>hello</h3>
-		<p>
-			notif
-		</p>
-	</div>
-	<div class="eventnotif">
-		<h3>hello</h3>
-		<p>
-			notif
-		</p>
-	</div>
-	<div class="eventnotif">
-		<h3>hello</h3>
-		<p>
-			notif
-		</p>
-	</div>
-	<div class="eventnotif">
-		<h3>hello</h3>
-		<p>
-			notif
-		</p>
-	</div>
-	<div class="eventnotif">
-		<h3>hello</h3>
-		<p>
-			notif
-		</p>
-	</div>
-	<div class="eventnotif">
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<h3>hello</h3>
-		<p>
-			notif
-		</p>
-	</div>
+	<script type="text/javascript" src="app/websocket.js"></script>
 </div>
