--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -15,7 +15,7 @@
             <div class="modal-login-content-fieldgroup">
                 <input type="text" placeholder="username" id="username">
                 <input type="password" placeholder="Password" id="password">
-                <input type="text" placeholder="email" id="email">
+                <input type="email" placeholder="email" id="email" required>
             </div>
 
             <div class="modal-login-content-buttongroup">
@@ -23,6 +23,6 @@
             </div>
         </div>
     </div>
-    
+
     <script type="text/javascript" src="app/login.js"></script>
 </div>
