--- a/partials/editEventModal.html
+++ b/partials/editEventModal.html
@@ -6,22 +6,22 @@
     </div>
     <h1 id="editEventID"></h1>
     <div class="modal-editEvent-timeInput">
-        <label for="startTime">Start</label>
-        <input type="time" id="startTime">
-        <input type="date" id="startDate">
+        <label for="editStartTime">Start</label>
+        <input type="time" id="editStartTime">
+        <input type="date" id="editStartDate">
     </div>
     <div class="modal-editEvent-timeInput">
-        <label for="endTime">End</label>
-        <input type="time" id="endTime">
-        <input type="date" id="endDate">
+        <label for="editEndTime">End</label>
+        <input type="time" id="editEndTime">
+        <input type="date" id="editEndDate">
     </div>
     <div class="modal-editEvent-textInput">
         <label for="location">Location</label>
-        <input type="text" id="location">
+        <input type="text" id="editLocation">
     </div>
     <div class="modal-editEvent-textInput">
         <label for="description">Description</label>
-        <input type="text" id="description">
+        <input type="text" id="editDescription">
     </div>
     <script type="text/javascript" src="app/editEvent.js"></script>
 </div>
