fixing merge conflicts on login.js

--- a/partials/editEventModal.html
+++ b/partials/editEventModal.html
@@ -23,5 +23,6 @@
         <label for="description">Description</label>
         <input type="text" id="editDescription">
     </div>
+    <button type="button" id="updateEventButton"></button>
     <script type="text/javascript" src="app/editEvent.js"></script>
 </div>
