guest mode works and saves to account once logged in

--- a/partials/loginModal.html
+++ b/partials/loginModal.html
@@ -12,7 +12,7 @@
         </div>
 
         <div>
-        	<form>
+        	<form onsubmit="return false">
 	            <div class="modal-login-content-fieldgroup">
 	                <input type="text" placeholder="username" id="username">
 	                <input type="password" placeholder="Password" id="password">
