--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -18,5 +18,6 @@
 @import "modules/calendar";
 @import "modules/sidebar";
 @import "modules/enroll";
+@import "modules/logout";
 
 // styles.scss EOF
