Adding some placeholder pics and discussion/lab loading fix

--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -1,9 +1,9 @@
 <div class="sidebar-container sidebar-container-logo">
-	<a href="/"><img src="assets/img/placeholder.jpg" alt="placeholder" /></a>
+	<a href="/"><img src="assets/img/calendar.jpg" alt="placeholder" /></a>
 </div>
 <div class="sidebar-container sidebar-container-user" ng-controller="loginCtrl">
 	<button class="sidebar-user" id="loginButton">
-		<img src="assets/img/placeholder.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
+		<img src="assets/img/calendar.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
 		<h2 id="sidebarUser">Guest</h2>
 	</button>
 </div>
