--- a/partials/editEventModal.html
+++ b/partials/editEventModal.html
@@ -48,7 +48,10 @@
         <datalist id="modal-editEvent-friends-list"></datalist>
     </div>
 
-    <button id="updateEventButton" value="Create">Create</button>
+    <div class="buttongroup">
+        <button id="updateEventButton" onclick="updateEvent()">Update</button>
+        <button id="deleteEventButton" onclick="deleteEvent()">Delete</button>
+    </div>
 
 
     <script type="text/javascript" src="app/editEvent.js"></script>
