--- a/partials/uploadModal.html
+++ b/partials/uploadModal.html
@@ -1,9 +1,12 @@
 <div class="modal-upload modal-content">
     <span class="close"><i class="fa fa-close fa-md"></i></span>
-    <div class="modal-login-content">
+    <div class="modal-upload-content">
 
 
-        <h1>HELLO YOOOUUU TUUUUUUUBE</h1>
+        <form class="modal-upload-content-file" action="index.html" method="post">
+            <label for="modal-upload-content-file-chooser">File: </label>
+            <input type="file" id="modal-upload-content-file-chooser">
+        </form>
 
 
     </div>
