--- a/partials/sidebar.html
+++ b/partials/sidebar.html
@@ -3,7 +3,7 @@
 </div>
 <div class="sidebar-container sidebar-container-user" ng-controller="loginCtrl">
 	<button class="sidebar-user" id="loginButton">
-		<img src="assets/img/calendar.jpg" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
+		<img src="assets/img/user-icon.png" alt="Profile Icon" class="sidebar-container-user-icon" align="middle">
 		<h2 id="sidebarUser">Guest</h2>
 	</button>
 </div>
