--- a/assets/scss/modules/sidebar.scss
+++ b/assets/scss/modules/sidebar.scss
@@ -35,6 +35,7 @@
             &-icon {
                 margin: 0 20px;
                 border-radius: 50%;
+                height: auto;
                 max-height: 50px;
                 vertical-align: middle;
             }
