--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -18,6 +18,7 @@
 @import "modules/calendar";
 @import "modules/sidebar";
 @import "modules/enroll";
+@import "modules/commonFind";
 @import "modules/logout";
 
 // styles.scss EOF
